#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
æµ‹è¯•ç™»å½•åŠŸèƒ½

éªŒè¯ï¼š
1. ç™»å½•æ¥å£æ˜¯å¦å¯è®¿é—®ï¼ˆé€šè¿‡ gRPC ç½‘å…³ï¼‰
2. ç™»å½•æ˜¯å¦è¿”å›æ­£ç¡®çš„ Token
3. Token æ˜¯å¦èƒ½è¢«éªŒè¯
"""

import sys
import os
import json
import requests

# æ·»åŠ é¡¹ç›®æ ¹ç›®å½•åˆ°è·¯å¾„
project_root = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
sys.path.insert(0, project_root)

BASE_URL = "http://localhost:8001"

def test_direct_login():
    """æµ‹è¯•ç›´æ¥ REST API ç™»å½•"""
    print("=" * 60)
    print("æµ‹è¯• 1: ç›´æ¥ REST API ç™»å½•")
    print("=" * 60)
    
    try:
        response = requests.post(
            f"{BASE_URL}/api/v1/auth/login",
            json={"username": "admin", "password": "admin123"},
            headers={"Content-Type": "application/json"},
            timeout=5
        )
        
        print(f"çŠ¶æ€ç : {response.status_code}")
        print(f"å“åº”: {response.text}")
        
        if response.status_code == 200:
            data = response.json()
            if "access_token" in data:
                print("âœ… ç›´æ¥ REST API ç™»å½•æˆåŠŸ")
                return data["access_token"]
            else:
                print("âŒ å“åº”ä¸­æ²¡æœ‰ access_token")
                return None
        else:
            print(f"âŒ ç™»å½•å¤±è´¥ï¼ŒçŠ¶æ€ç : {response.status_code}")
            return None
            
    except requests.exceptions.ConnectionError:
        print("âŒ æ— æ³•è¿æ¥åˆ°æœåŠ¡å™¨ï¼Œè¯·ç¡®ä¿æœåŠ¡å·²å¯åŠ¨")
        return None
    except Exception as e:
        print(f"âŒ é”™è¯¯: {e}")
        return None


def test_grpc_gateway_login():
    """æµ‹è¯•é€šè¿‡ gRPC ç½‘å…³ç™»å½•é…ç½®"""
    print("\n" + "=" * 60)
    print("æµ‹è¯• 2: æ£€æŸ¥ gRPC ç½‘å…³ç™»å½•é…ç½®")
    print("=" * 60)
    
    try:
        # æ£€æŸ¥è®¤è¯ä¸­é—´ä»¶ç™½åå•
        print("\næ£€æŸ¥è®¤è¯ä¸­é—´ä»¶ç™½åå•...")
        try:
            with open("server/middleware/auth_middleware.py", "r", encoding="utf-8") as f:
                content = f.read()
                grpc_path = "/api/grpc-web/frontend.gateway.FrontendGateway/Call"
                if grpc_path in content:
                    print(f"âœ… gRPC ç½‘å…³è·¯å¾„åœ¨ç™½åå•ä¸­: {grpc_path}")
                else:
                    print(f"âŒ gRPC ç½‘å…³è·¯å¾„ä¸åœ¨ç™½åå•ä¸­: {grpc_path}")
        except Exception as e:
            print(f"âš ï¸  æ— æ³•æ£€æŸ¥ç™½åå•é…ç½®: {e}")
        
        # æ£€æŸ¥ gRPC ç½‘å…³ä¸­çš„ç™½åå•ç«¯ç‚¹
        print("\næ£€æŸ¥ gRPC ç½‘å…³ç™½åå•ç«¯ç‚¹...")
        try:
            with open("server/api/grpc_gateway.py", "r", encoding="utf-8") as f:
                content = f.read()
                if '"/auth/login"' in content and "whitelist_endpoints" in content:
                    print("âœ… gRPC ç½‘å…³ä¸­å·²é…ç½®ç™»å½•æ¥å£ç™½åå•")
                else:
                    print("âŒ gRPC ç½‘å…³ä¸­æœªæ‰¾åˆ°ç™»å½•æ¥å£ç™½åå•é…ç½®")
        except Exception as e:
            print(f"âš ï¸  æ— æ³•æ£€æŸ¥ gRPC ç½‘å…³é…ç½®: {e}")
        
        return True
        
    except Exception as e:
        print(f"âŒ é”™è¯¯: {e}")
        import traceback
        traceback.print_exc()
        return False


def test_token_verification(token):
    """æµ‹è¯• Token éªŒè¯"""
    print("\n" + "=" * 60)
    print("æµ‹è¯• 3: Token éªŒè¯")
    print("=" * 60)
    
    if not token:
        print("âš ï¸  è·³è¿‡ Token éªŒè¯ï¼ˆæœªè·å–åˆ° Tokenï¼‰")
        return False
    
    try:
        # æ³¨æ„ï¼šè¿™é‡Œéœ€è¦æœåŠ¡è¿è¡Œæ‰èƒ½æµ‹è¯•
        print("âš ï¸  Token éªŒè¯éœ€è¦è®¤è¯æœåŠ¡è¿è¡Œ")
        print(f"   Token: {token[:20]}...")
        print("   è¯·åœ¨æœåŠ¡è¿è¡Œåæ‰‹åŠ¨æµ‹è¯•")
        return None
        
    except Exception as e:
        print(f"âŒ Token éªŒè¯é”™è¯¯: {e}")
        return False


def test_protected_endpoint(token):
    """æµ‹è¯•ä½¿ç”¨ Token è®¿é—®å—ä¿æŠ¤æ¥å£"""
    print("\n" + "=" * 60)
    print("æµ‹è¯• 4: ä½¿ç”¨ Token è®¿é—®å—ä¿æŠ¤æ¥å£")
    print("=" * 60)
    
    if not token:
        print("âš ï¸  è·³è¿‡æµ‹è¯•ï¼ˆæœªè·å–åˆ° Tokenï¼‰")
        return False
    
    try:
        # æµ‹è¯•è®¿é—®ä¸€ä¸ªéœ€è¦è®¤è¯çš„æ¥å£
        response = requests.get(
            f"{BASE_URL}/api/v1/bazi/calculate",
            params={
                "solar_date": "1990-01-15",
                "solar_time": "12:00",
                "gender": "male"
            },
            headers={
                "Authorization": f"Bearer {token}"
            },
            timeout=5
        )
        
        print(f"çŠ¶æ€ç : {response.status_code}")
        
        if response.status_code == 200:
            print("âœ… ä½¿ç”¨ Token è®¿é—®å—ä¿æŠ¤æ¥å£æˆåŠŸ")
            return True
        elif response.status_code == 401:
            print("âŒ Token éªŒè¯å¤±è´¥ï¼ˆ401 Unauthorizedï¼‰")
            print(f"   å“åº”: {response.text}")
            return False
        else:
            print(f"âš ï¸  æ„å¤–çŠ¶æ€ç : {response.status_code}")
            print(f"   å“åº”: {response.text}")
            return False
            
    except requests.exceptions.ConnectionError:
        print("âŒ æ— æ³•è¿æ¥åˆ°æœåŠ¡å™¨")
        return False
    except Exception as e:
        print(f"âŒ é”™è¯¯: {e}")
        return False


def main():
    """ä¸»æµ‹è¯•å‡½æ•°"""
    print("å¼€å§‹æµ‹è¯•ç™»å½•åŠŸèƒ½...\n")
    
    # æµ‹è¯• 1: ç›´æ¥ REST API ç™»å½•
    token = test_direct_login()
    
    # æµ‹è¯• 2: gRPC ç½‘å…³é…ç½®æ£€æŸ¥
    test_grpc_gateway_login()
    
    # æµ‹è¯• 3: Token éªŒè¯ï¼ˆå¦‚æœè·å–åˆ° Tokenï¼‰
    if token:
        test_token_verification(token)
        test_protected_endpoint(token)
    
    print("\n" + "=" * 60)
    print("æµ‹è¯•å®Œæˆ")
    print("=" * 60)
    print("\nğŸ’¡ æç¤ºï¼š")
    print("1. å¦‚æœç›´æ¥ REST API ç™»å½•æˆåŠŸï¼Œè¯´æ˜ç™»å½•æ¥å£æœ¬èº«æ²¡é—®é¢˜")
    print("2. å¦‚æœ gRPC ç½‘å…³è·¯å¾„åœ¨ç™½åå•ä¸­ï¼Œè¯´æ˜è®¤è¯ä¸­é—´ä»¶é…ç½®æ­£ç¡®")
    print("3. å¦‚æœ Token éªŒè¯æˆåŠŸï¼Œè¯´æ˜è®¤è¯æœåŠ¡æ­£å¸¸å·¥ä½œ")
    print("4. å‰ç«¯ç™»å½•åº”è¯¥èƒ½æ­£å¸¸å·¥ä½œï¼ˆé€šè¿‡ gRPC ç½‘å…³ï¼‰")


if __name__ == "__main__":
    main()
